# zoot

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/zoot/: suit.h
src/: :w  auth.c  generate.c  parse.c
tests/: .prj.conf.swp  CMakeLists.txt  prj.conf
tests/src/: main.c  tests.c  vectors.h
zephyr/: Kconfig
